# project_DZ12.2_get_val

./: README.md  pyproject.toml
tests/: conftest.py  test_dicts.py
utils/: dicts.py
