[tool.poetry]
name = "skypro-dz12-2"
version = "0.1.0"
description = ""
authors = ["eliseev <twicheg@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_dz12"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
